--- a/final/css/style.css
+++ b/final/css/style.css
@@ -1,4 +1,4 @@
-font-face {
+@font-face {
     font-family: GG Light;
     src: url(../fonts/GGX88\ W01\ Light.ttf);
     font-weight: normal;
@@ -13,9 +13,10 @@ font-face {
     src: url(../fonts/GGX88\ W01\ UltraLight.ttf);
     font-weight: normal;
   }
-
   #recent {
+    position: fixed;
     color: #27496d;
+    
     height: 15px;
     width: 100%;
     left: 0px;
@@ -26,11 +27,12 @@ font-face {
     text-align: center;
     padding-top: 15px;
 }
-
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     #recent {
+        position: fixed;
         color: #27496d;
+        
         height: 15px;
         width: 100%;
         left: 0px;
@@ -42,7 +44,6 @@ font-face {
         padding-top: 35px;
     }
 }  
-
 .logo1{
     content:url("../images/Logo_1.png");
     display: block;
@@ -50,9 +51,7 @@ font-face {
     margin-right: auto;
     max-width: 30%;
     animation: logoAnim 1s ease 0s 1 normal forwards;
-
 }
-
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     .logo1{
@@ -66,7 +65,6 @@ font-face {
         
     }
 }
-
 @keyframes logoAnim {
     0% {
       transform: scale(0);
@@ -76,8 +74,8 @@ font-face {
       transform: scale(1);
     }
   }
-
 .logo2{
+    position: fixed;
     content: url("../images/Logo_2.png");
     display: block;
     max-width: 8%;
@@ -86,7 +84,6 @@ font-face {
     
     
 }
-
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     .logo2{
@@ -99,8 +96,8 @@ font-face {
         
     }
 }
-
 header {
+    position: fixed;
     top: 50px;
     left: 0px;
     background: linear-gradient(0deg, #547aa2, #547aa2 33.33%, #27496d 33.33%, #27496d 66.66%, #17324f 66.66%);
@@ -108,13 +105,11 @@ header {
     text-align: center; 
     height: 160px;
     width: 100%;
-    padding-top: 30px;
 }
-
-
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     header {
+        position: fixed;
         top: 65px;
         left: 0px;
         background: linear-gradient(180deg, #547aa2, #547aa2 33.33%, #27496d 33.33%, #27496d 66.66%, #17324f 66.66%);
@@ -124,22 +119,21 @@ header {
         width: 100%;
     }
 }
-
 .header2 {
-    top: 40px;
+    position: fixed;
+    top: 50px;
     left: 0px;
     background: #27496d;
     color: white;
     font-family: 'GG Light', Arial, sans-serif;
     text-align: center; 
-    height: 50px;
+    height: 60px;
     width: 100%;
 }
-
-
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     .header2 {
+        position: absolute;
         top: 65px;
         left: 0px;
         background: #27496d;
@@ -150,22 +144,21 @@ header {
         width: 100%;
     }
 }
-
 .header3 {
-    top: 40px;
+    position: fixed;
+    top: 50px;
     left: 0px;
     background: #547aa2;
     color: white;
     font-family: 'GG Light', Arial, sans-serif;
     text-align: center; 
-    height: 50px;
+    height: 60px;
     width: 100%;
 }
-
-
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     .header3 {
+        position: absolute;
         top: 65px;
         left: 0px;
         background: #547aa2;
@@ -176,22 +169,21 @@ header {
         width: 100%;
     }
 }
-
 .header4 {
-    top: 40px;
+    position: fixed;
+    top: 50px;
     left: 0px;
     background: #17324f;
     color: white;
     font-family: 'GG Light', Arial, sans-serif;
     text-align: center; 
-    height: 50px;
+    height: 60px;
     width: 100%;
 }
-
-
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     .header4 {
+        position: absolute;
         top: 65px;
         left: 0px;
         background: #17324f;
@@ -202,8 +194,6 @@ header {
         width: 100%;
     }
 }
-
-
 .headerText {
     color: white;
     text-align: center;
@@ -214,7 +204,6 @@ header {
     text-decoration-thickness: 1px;
     text-underline-position: under;
 }
-
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     .headerText {
@@ -228,7 +217,6 @@ header {
         text-underline-position: under;
     }
 }
-
 .headerText2 {
     color: white;
     text-align: center;
@@ -237,7 +225,6 @@ header {
     font-size: 40px;
     text-decoration: none;
 }
-
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     .headerText2 {
@@ -249,19 +236,18 @@ header {
         text-decoration: none;
     }
 }
-
-
 .footer {
+    position: fixed;
     background-color: #27496d;
     left: 0;
     bottom: 0;
     width: 100%;
     height: 2em;
 }
-
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     .footer {
+        position: fixed;
         background-color: #27496d;
         left: 0;
         bottom: 0;
@@ -269,7 +255,6 @@ header {
         height: 3em;
     }
 }
-
 /* these columns and rows are for the footer logos*/
 .column {
     float: right;
@@ -278,7 +263,6 @@ header {
     padding-top: 6px;
     margin-right: 10px;
   }
-
   /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     .column {
@@ -296,14 +280,13 @@ header {
     clear: both;
     display: table;
   }
-
   .column:hover {
     color: black;
     border-radius: 50%;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
-
 #contact{
+    position: absolute;
     top: 125px;
     left: 0px;
     background-color: white;
@@ -313,10 +296,10 @@ header {
     width: 100%;
     text-align: center;
 }
-
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     #contact{
+        position: absolute;
         top: 150px;
         left: 0px;
         background-color: white;
@@ -327,24 +310,22 @@ header {
         text-align: center;
     }
 }
-
 #about{
-    top: 140px;
+    position: absolute;
+    top: 125px;
     left: 0px;
     background-color: white;
     font-family: 'GG Light', Arial, sans-serif;
     font-size: 16px;
-    margin-top: 20;
+    margin-top: 0;
     width: 100%;
     text-align: center;
-    padding: 20px;
-   
-
+    padding-top: 20px;
 }
-
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     #about{
+        position: absolute;
         top: 150px;
         left: 0px;
         background-color: white;
@@ -356,9 +337,9 @@ header {
         padding-top: 60px;
     }
 }
-
 .container{
-    top: 180px;
+    position: absolute;
+    top: 140px;
     left: 0px;
     background-color: white;
     color: #17324f;
@@ -368,10 +349,10 @@ header {
     width: 100%;
     text-align: center;
 }
-
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     .container{
+        position: absolute;
         top: 210px;
         left: 0px;
         background-color: white;
@@ -383,12 +364,10 @@ header {
         text-align: center;
     }
 }
-
 .slide img{
     max-height: 300px;
     padding: 5px;
 }    
-
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     .slide img{
@@ -397,6 +376,7 @@ header {
     }        
 }
 .table1 img{
+    max-height: 150px;
     max-width: 150px;
     padding: 10px;  
 }        
@@ -405,18 +385,18 @@ header {
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     .table1 img{
+        max-height: 300px;
         max-width: 500px;
         padding: 10px;  
     }        
 }
 
 .table2 img{
+    max-width: 200px;
     max-width: 170px;
     padding: 8px; 
     padding-left: 20px; 
 }        
-
-
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     .table2 img{
@@ -424,38 +404,36 @@ header {
         padding: 10px;  
     }        
 }
-
 #photos{
     border-spacing: -10px;
-    float: center;
+    text-align: center;
+    padding-left: 0px;
 }
-
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     #photos{
         border-spacing: 100px;
-        float: center;
+        text-align: center;
+        padding-left: 350px;
     }       
 }
-
 #artwork{
     border-spacing: 15px;
-    float: center;
+    text-align: center;
+    padding-left: 5px;
 }
-
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     #artwork{
         border-spacing: 100px;
-        float: center;
+        text-align: center;
+        padding-left: 400px;
     }       
 }
-
 iframe {
     width: 360px;
     height: 203px;
 }
-
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     iframe {
@@ -463,54 +441,43 @@ iframe {
         height: 406px;
     }     
 }
-
-
 #animation {
     border-top: 5px solid #27496d;
 }
-
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     #animation {
         border-top: 15px solid #27496d;
     }
 }
-
-
 #photography{
     border-top: 5px solid #27496d;
 }
-
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     #photography {
         border-top: 15px solid #27496d;
     }
 }
-
 #art {
     border-top: 5px solid #27496d;
 }
-
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     #art {
         border-top: 15px solid #27496d;
     }
 }
-
 a:link {
     color: #17324f;
     font-style: normal;
     text-decoration: none;
     
  }
-
 a:hover {
     color: #547aa2;
     
  }
-
     menu {
     position: fixed;
     top: 0px;
@@ -521,11 +488,10 @@ a:hover {
     width: 100%;
     text-align: left;
 }
-
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     menu{
-        position: fixed;
+        position: absolute;
         top: 0px;
         right: 10px;
         background-color: white;
@@ -538,9 +504,6 @@ a:hover {
         
     }
 }
-
-
-
 .menu-item {
     display: inline-block;
     margin: .5em .2em;
@@ -549,7 +512,6 @@ a:hover {
     background-color: white;
     padding: 0.5em 1em;
 }
-
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     .menu-item {
@@ -561,26 +523,20 @@ a:hover {
         padding: 12px 16px;
     }
 }
-
-
 .menu-item a {
     color: #27496d;
     text-decoration: none;
 }
-
 .menu-item:hover {
     color: black;
     border-radius: 5%;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
-
     .dropdown {
         position: relative;
         display: inline-block;
         z-index: 1;
       }
-
-
   /* Dropdown Content (Hidden by Default) */
   .dropdown-content {
     display: none;
@@ -594,7 +550,6 @@ a:hover {
     z-index: 1;
     font-size: 14.5px;
   }
-
   
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
@@ -612,7 +567,6 @@ a:hover {
     font-size: 14.5px;
   }
 }
-
   /* Links inside the dropdown */
   .dropdown-content a {
     color: #27496d;
@@ -634,13 +588,11 @@ a:hover {
     display: block;
   }
   
-
 #slideshow {
     padding-top: 70px;
     border-spacing: 70px;
     animation: tableAnim 240s linear 0s infinite normal forwards;
 }
-
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     #slideshow {
@@ -649,8 +601,6 @@ a:hover {
         animation: tableAnim 240s linear 0s infinite normal forwards;
     }
 }
-
-
 @keyframes tableAnim {
     0% {
         transform: translateX(0);
@@ -659,16 +609,13 @@ a:hover {
       50% {
         transform: translateX(-4300px);
       }
-
     100% { 
         transform: translateX(4333)
     }
-
-
   }
-
   .submenu {
-    top: 110px;
+    position: fixed;
+    top: 100px;
     right: 0px;
     padding-left: 0px;
     background-color: white;
@@ -678,10 +625,10 @@ a:hover {
     width: 100%;
     text-align: center;
 }
-
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     .submenu{
+        position: absolute;
         top: 145px;
         padding-top: 5px;
         background-color: white;
@@ -694,7 +641,6 @@ a:hover {
         
     }
 }
-
 .submenu-item {
     display: inline-block;
     margin: auto;
@@ -703,7 +649,6 @@ a:hover {
     background-color: white;
     padding: 0.5em 1em;
 }
-
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     .submenu-item {
@@ -715,13 +660,10 @@ a:hover {
         padding: 12px 100px;
     }
 }
-
-
 .submenu-item a {
     color: #27496d;
     text-decoration: none;
 }
-
 .submenu-item:hover {
     color: black;
     border-radius: 5%;
