--- a/final/css/style.css
+++ b/final/css/style.css
@@ -74,16 +74,21 @@
       transform: scale(1);
     }
   }
+
 .logo2{
     position: fixed;
     content: url("../images/Logo_2.png");
     display: block;
     max-width: 8%;
+    float: left;
+    padding-left: 0;
+    padding-top: 4px;
     top: 4px;
     left: 4px;
-    
-    
+
+
 }
+
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     .logo2{
@@ -119,7 +124,9 @@ header {
         width: 100%;
     }
 }
+
 .header2 {
+    position: absolute;
     position: fixed;
     top: 50px;
     left: 0px;
@@ -144,7 +151,9 @@ header {
         width: 100%;
     }
 }
+
 .header3 {
+    position: absolute;
     position: fixed;
     top: 50px;
     left: 0px;
@@ -169,7 +178,9 @@ header {
         width: 100%;
     }
 }
+
 .header4 {
+    position: absolute;
     position: fixed;
     top: 50px;
     left: 0px;
@@ -364,12 +375,17 @@ header {
         text-align: center;
     }
 }
+
+td img{
+    max-height: 150px;
 .slide img{
     max-height: 300px;
     padding: 5px;
 }    
+
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
+    td img{
     .slide img{
         max-height: 300px;
         padding: 5px;
@@ -377,7 +393,6 @@ header {
 }
 .table1 img{
     max-height: 150px;
-    max-width: 150px;
     padding: 10px;  
 }        
 
@@ -386,17 +401,17 @@ header {
 @media only screen and (min-width: 600px) {
     .table1 img{
         max-height: 300px;
-        max-width: 500px;
         padding: 10px;  
     }        
 }
 
 .table2 img{
     max-width: 200px;
-    max-width: 170px;
     padding: 8px; 
     padding-left: 20px; 
 }        
+
+
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     .table2 img{
@@ -404,6 +419,7 @@ header {
         padding: 10px;  
     }        
 }
+
 #photos{
     border-spacing: -10px;
     text-align: center;
@@ -478,7 +494,9 @@ a:hover {
     color: #547aa2;
     
  }
+
     menu {
+    position: absolute;
     position: fixed;
     top: 0px;
     background-color: white;
