--- a/final/css/style.css
+++ b/final/css/style.css
@@ -13,6 +13,7 @@
     src: url(../fonts/GGX88\ W01\ UltraLight.ttf);
     font-weight: normal;
   }
+
   #recent {
     position: fixed;
     color: #27496d;
@@ -27,6 +28,7 @@
     text-align: center;
     padding-top: 15px;
 }
+
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     #recent {
@@ -44,6 +46,7 @@
         padding-top: 35px;
     }
 }  
+
 .logo1{
     content:url("../images/Logo_1.png");
     display: block;
@@ -51,7 +54,9 @@
     margin-right: auto;
     max-width: 30%;
     animation: logoAnim 1s ease 0s 1 normal forwards;
+
 }
+
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     .logo1{
@@ -65,6 +70,7 @@
         
     }
 }
+
 @keyframes logoAnim {
     0% {
       transform: scale(0);
@@ -80,13 +86,10 @@
     content: url("../images/Logo_2.png");
     display: block;
     max-width: 8%;
-    float: left;
-    padding-left: 0;
-    padding-top: 4px;
     top: 4px;
     left: 4px;
-
-
+    
+    
 }
 
 /* For width 600px and larger: */
@@ -101,6 +104,7 @@
         
     }
 }
+
 header {
     position: fixed;
     top: 50px;
@@ -110,7 +114,10 @@ header {
     text-align: center; 
     height: 160px;
     width: 100%;
+    padding-top: 30px;
 }
+
+
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     header {
@@ -127,16 +134,17 @@ header {
 
 .header2 {
     position: absolute;
-    position: fixed;
     top: 50px;
     left: 0px;
     background: #27496d;
     color: white;
     font-family: 'GG Light', Arial, sans-serif;
     text-align: center; 
-    height: 60px;
+    height: 50px;
     width: 100%;
 }
+
+
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     .header2 {
@@ -154,7 +162,6 @@ header {
 
 .header3 {
     position: absolute;
-    position: fixed;
     top: 50px;
     left: 0px;
     background: #547aa2;
@@ -164,6 +171,8 @@ header {
     height: 60px;
     width: 100%;
 }
+
+
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     .header3 {
@@ -181,7 +190,6 @@ header {
 
 .header4 {
     position: absolute;
-    position: fixed;
     top: 50px;
     left: 0px;
     background: #17324f;
@@ -191,6 +199,8 @@ header {
     height: 60px;
     width: 100%;
 }
+
+
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     .header4 {
@@ -205,6 +215,8 @@ header {
         width: 100%;
     }
 }
+
+
 .headerText {
     color: white;
     text-align: center;
@@ -215,6 +227,7 @@ header {
     text-decoration-thickness: 1px;
     text-underline-position: under;
 }
+
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     .headerText {
@@ -228,6 +241,7 @@ header {
         text-underline-position: under;
     }
 }
+
 .headerText2 {
     color: white;
     text-align: center;
@@ -236,6 +250,7 @@ header {
     font-size: 40px;
     text-decoration: none;
 }
+
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     .headerText2 {
@@ -247,6 +262,8 @@ header {
         text-decoration: none;
     }
 }
+
+
 .footer {
     position: fixed;
     background-color: #27496d;
@@ -255,6 +272,7 @@ header {
     width: 100%;
     height: 2em;
 }
+
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     .footer {
@@ -266,6 +284,7 @@ header {
         height: 3em;
     }
 }
+
 /* these columns and rows are for the footer logos*/
 .column {
     float: right;
@@ -274,6 +293,7 @@ header {
     padding-top: 6px;
     margin-right: 10px;
   }
+
   /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     .column {
@@ -291,11 +311,13 @@ header {
     clear: both;
     display: table;
   }
+
   .column:hover {
     color: black;
     border-radius: 50%;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
+
 #contact{
     position: absolute;
     top: 125px;
@@ -307,6 +329,7 @@ header {
     width: 100%;
     text-align: center;
 }
+
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     #contact{
@@ -321,6 +344,7 @@ header {
         text-align: center;
     }
 }
+
 #about{
     position: absolute;
     top: 125px;
@@ -328,11 +352,14 @@ header {
     background-color: white;
     font-family: 'GG Light', Arial, sans-serif;
     font-size: 16px;
-    margin-top: 0;
+    margin-top: 20;
     width: 100%;
     text-align: center;
-    padding-top: 20px;
+    padding: 20px;
+   
+
 }
+
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     #about{
@@ -348,6 +375,7 @@ header {
         padding-top: 60px;
     }
 }
+
 .container{
     position: absolute;
     top: 140px;
@@ -360,6 +388,7 @@ header {
     width: 100%;
     text-align: center;
 }
+
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     .container{
@@ -376,8 +405,6 @@ header {
     }
 }
 
-td img{
-    max-height: 150px;
 .slide img{
     max-height: 300px;
     padding: 5px;
@@ -385,14 +412,13 @@ td img{
 
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
-    td img{
     .slide img{
         max-height: 300px;
         padding: 5px;
     }        
 }
 .table1 img{
-    max-height: 150px;
+    max-width: 150px;
     padding: 10px;  
 }        
 
@@ -400,13 +426,13 @@ td img{
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     .table1 img{
-        max-height: 300px;
+        max-width: 500px;
         padding: 10px;  
     }        
 }
 
 .table2 img{
-    max-width: 200px;
+    max-width: 170px;
     padding: 8px; 
     padding-left: 20px; 
 }        
@@ -425,6 +451,7 @@ td img{
     text-align: center;
     padding-left: 0px;
 }
+
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     #photos{
@@ -433,11 +460,13 @@ td img{
         padding-left: 350px;
     }       
 }
+
 #artwork{
     border-spacing: 15px;
     text-align: center;
     padding-left: 5px;
 }
+
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     #artwork{
@@ -446,10 +475,12 @@ td img{
         padding-left: 400px;
     }       
 }
+
 iframe {
     width: 360px;
     height: 203px;
 }
+
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     iframe {
@@ -457,39 +488,49 @@ iframe {
         height: 406px;
     }     
 }
+
+
 #animation {
     border-top: 5px solid #27496d;
 }
+
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     #animation {
         border-top: 15px solid #27496d;
     }
 }
+
+
 #photography{
     border-top: 5px solid #27496d;
 }
+
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     #photography {
         border-top: 15px solid #27496d;
     }
 }
+
 #art {
     border-top: 5px solid #27496d;
 }
+
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     #art {
         border-top: 15px solid #27496d;
     }
 }
+
 a:link {
     color: #17324f;
     font-style: normal;
     text-decoration: none;
     
  }
+
 a:hover {
     color: #547aa2;
     
@@ -497,7 +538,6 @@ a:hover {
 
     menu {
     position: absolute;
-    position: fixed;
     top: 0px;
     background-color: white;
     font-family: 'GG Extralight', Arial, sans-serif;
@@ -506,6 +546,7 @@ a:hover {
     width: 100%;
     text-align: left;
 }
+
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     menu{
@@ -522,6 +563,9 @@ a:hover {
         
     }
 }
+
+
+
 .menu-item {
     display: inline-block;
     margin: .5em .2em;
@@ -530,6 +574,7 @@ a:hover {
     background-color: white;
     padding: 0.5em 1em;
 }
+
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     .menu-item {
@@ -541,20 +586,26 @@ a:hover {
         padding: 12px 16px;
     }
 }
+
+
 .menu-item a {
     color: #27496d;
     text-decoration: none;
 }
+
 .menu-item:hover {
     color: black;
     border-radius: 5%;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
+
     .dropdown {
         position: relative;
         display: inline-block;
         z-index: 1;
       }
+
+
   /* Dropdown Content (Hidden by Default) */
   .dropdown-content {
     display: none;
@@ -568,6 +619,7 @@ a:hover {
     z-index: 1;
     font-size: 14.5px;
   }
+
   
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
@@ -585,6 +637,7 @@ a:hover {
     font-size: 14.5px;
   }
 }
+
   /* Links inside the dropdown */
   .dropdown-content a {
     color: #27496d;
@@ -606,11 +659,13 @@ a:hover {
     display: block;
   }
   
+
 #slideshow {
     padding-top: 70px;
     border-spacing: 70px;
     animation: tableAnim 240s linear 0s infinite normal forwards;
 }
+
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     #slideshow {
@@ -619,6 +674,8 @@ a:hover {
         animation: tableAnim 240s linear 0s infinite normal forwards;
     }
 }
+
+
 @keyframes tableAnim {
     0% {
         transform: translateX(0);
@@ -627,13 +684,17 @@ a:hover {
       50% {
         transform: translateX(-4300px);
       }
+
     100% { 
         transform: translateX(4333)
     }
+
+
   }
+
   .submenu {
-    position: fixed;
-    top: 100px;
+    position: absolute;
+    top: 110px;
     right: 0px;
     padding-left: 0px;
     background-color: white;
@@ -643,6 +704,7 @@ a:hover {
     width: 100%;
     text-align: center;
 }
+
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     .submenu{
@@ -659,6 +721,7 @@ a:hover {
         
     }
 }
+
 .submenu-item {
     display: inline-block;
     margin: auto;
@@ -667,6 +730,7 @@ a:hover {
     background-color: white;
     padding: 0.5em 1em;
 }
+
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     .submenu-item {
@@ -678,10 +742,13 @@ a:hover {
         padding: 12px 100px;
     }
 }
+
+
 .submenu-item a {
     color: #27496d;
     text-decoration: none;
 }
+
 .submenu-item:hover {
     color: black;
     border-radius: 5%;
