--- a/final/css/style.css
+++ b/final/css/style.css
@@ -29,10 +29,10 @@
     height: 15px;
     width: 100%;
     left: 0px;
-    top: 325px;
+    top: 250px;
     font-family: 'GG Extralight', Arial, sans-serif;
     font-weight: normal;
-    font-size: 25px;
+    font-size: 30px;
     text-align: center;
     padding-top: 15px;
 }
@@ -114,7 +114,7 @@
 }
 
 header {
-    position: fixed;
+    position: absolute;
     top: 50px;
     left: 0px;
     background: linear-gradient(0deg, #547aa2, #547aa2 33.33%, #27496d 33.33%, #27496d 66.66%, #17324f 66.66%);
@@ -128,7 +128,7 @@ header {
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     header {
-        position: fixed;
+        position: absolute;
         top: 65px;
         left: 0px;
         background: linear-gradient(180deg, #547aa2, #547aa2 33.33%, #27496d 33.33%, #27496d 66.66%, #17324f 66.66%);
@@ -366,7 +366,7 @@ header {
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     #about{
-        position: fixed;
+        position: absolute;
         top: 200px;
         left: 0px;
         background-color: white;
@@ -709,7 +709,7 @@ a:hover {
   
 
 #slideshow {
-    padding-top: 400px;
+    padding-top: 70px;
     border-spacing: 70px;
     animation: tableAnim 240s linear 0s infinite normal forwards;
 }
@@ -717,7 +717,7 @@ a:hover {
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
     #slideshow {
-        padding-top: 480px;
+        padding-top: 70px;
         border-spacing: 70px;
         animation: tableAnim 240s linear 0s infinite normal forwards;
     }
