--- a/final/css/style.css
+++ b/final/css/style.css
@@ -706,6 +706,7 @@ a:hover {
 
 #slideshow {
     position: absolute;
+    max-width: 100%;
     padding-top: 70px;
     border-spacing: 70px;
     animation: tableAnim 240s linear 0s infinite normal forwards;
