--- a/final/css/style.css
+++ b/final/css/style.css
@@ -16,8 +16,8 @@
   
   html,body
   {
-      
-      height: 100%;
+      width: 100%;
+      height: 100%;      
       margin: 0px;
       padding: 0px;
       overflow-x: hidden; 
@@ -285,7 +285,6 @@ header {
     .footer {
         position: fixed;
         background-color: #27496d;
-        left: 0;
         bottom: 0;
         width: 100%;
         height: 3em;
@@ -565,8 +564,7 @@ a:hover {
 @media only screen and (min-width: 600px) {
     menu{
         position: absolute;
-        top: 0px;
-        right: 10px;
+        left: -50px;
         background-color: white;
         font-family: 'GG Extralight', Arial, sans-serif;
         font-size: 20px;
