--- a/final/css/style.css
+++ b/final/css/style.css
@@ -555,7 +555,7 @@ a:hover {
     margin-top: 0;
     height: 3em;
     width: 100%;
-    text-align: right;
+    text-align: center;
     padding: 0;
 }
 
